Fix bugs: - In commit/branch view the tree control is at the bottom rather than to the side - When file is larger than the tree control (in height) there is still a vertical scrollbar on the tree control

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -52,6 +52,7 @@
 
 #treeDiff .fileIcon {
 	color: #4B6884;
+	cursor: pointer;
 }
 
 #treeDiff .isReviewed .fileIcon{
@@ -60,6 +61,10 @@
 
 #treeDiff .hasComment .fileIcon{
 	color: #FDA428;
+}
+
+#treeDiff .jstree-anchor {
+	cursor: default;
 }
 
 .diff-tree-aside section.iterable-item.bb-udiff {
